完成了paperManagement的接口，等把  5.编辑试题 提供接口后再做

--- a/src/main/resources/templates/readme
+++ b/src/main/resources/templates/readme
@@ -10,3 +10,12 @@ classManagement
 hy 完成了：
 classManagement 测试完毕
 前端需要稍稍改一下接受的参数名字，可以在控制台看json的返回值，作相应的调整。
+
+
+---------------------------------12.26. -----------------------------------------
+hy 完成了：
+paperManagement 测试完毕
+前端可以参考我发到群里的《更改过后的返回数据》有截图。
+前端需要稍稍改一下接受的参数名字，可以在控制台看json的返回值，作相应的调整。
+
+
