完成了部分paperMark

--- a/src/main/resources/templates/readme
+++ b/src/main/resources/templates/readme
@@ -18,4 +18,9 @@ paperManagement 测试完毕
 前端可以参考我发到群里的《更改过后的返回数据》有截图。
 前端需要稍稍改一下接受的参数名字，可以在控制台看json的返回值，作相应的调整。
 
-
+---------------------------------12.27. -----------------------------------------
+hy 完成了：
+paperMark
+1 页面加载完毕发起请求init()
+2 根据paper_id 获取第index份答卷信息
+并且该为先用paperid请求studentidList，然后再根据paperid和studentid请求指定试题
